fix mobile view button align

--- a/src/components/GenericHero/GenericHero.scss
+++ b/src/components/GenericHero/GenericHero.scss
@@ -83,13 +83,6 @@
     object-fit: contain;
   }
 
-  &__button {
-    @media ($medium-up) {
-      padding-top: calc(#{spacing(4)} + 0.125rem);
-      padding-bottom: calc(#{spacing(4)} - 0.125rem);
-    }
-  }
-
   &__two-images {
     flex-direction: column;
     justify-content: center;
