--- a/src/components/base/Button/Button.scss
+++ b/src/components/base/Button/Button.scss
@@ -191,7 +191,7 @@
     }
 
     &.Button--primary-responsive {
-      padding-top: 0.8rem;
+      padding-top: 0.675rem;
 
       @media ($medium-up) {
         padding-top: 1.4rem;
